# fuckdr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
fuckdr/: fkdr.py
tests/: test_aes.py
